--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "mdbvue": "^6.7.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
