--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
+    "axios": "^0.19.2",
     "mdbvue": "^6.7.1",
     "vue": "^2.5.2",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.0.1",
     "vue-sidebar-menu": "^4.6.0"
   },
@@ -46,6 +48,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "sass-loader": "^7.3.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
